--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 tracing = "0.1.34"
-tracing-subscriber = {version = "0.3.11", features = ["std", "env-filter"]}
+tracing-subscriber = {version = "0.3.11",  default-features = false, features = [ "smallvec", "fmt", "ansi", "std"]}
 tracing-opentelemetry = "0.17.2"
 opentelemetry-jaeger = "0.16.0"
 opentelemetry = "0.17"
